--- a/Code Review 1/style.css
+++ b/Code Review 1/style.css
@@ -51,6 +51,10 @@ li a {
     color: white;
 }
 
+p {  
+font-family: Arial;
+}
+
 .text {
     font-family: Arial;
     font-size: 80px;
@@ -80,8 +84,18 @@ li a {
     min-width: 20%;
 }
 
-.cell img {
+.grid > div{
+display: flex;
+flex-flow: column;
+align-items: center;
+}
+
+
+
+.cell > img {
     display: block;
+    margin: 10px 0;
+    padding-top: 20px;
 }
 
 .container {
@@ -94,6 +108,7 @@ li a {
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+        justify-content: center;
     }
     .cell {
         width: 50%;
